base/60-taxcalc-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taxcalc-api
  namespace: taxcalc-dev
  labels:
    app.kubernetes.io/name: taxcalc-api
    app.kubernetes.io/part-of: taxcalc
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/component: api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: taxcalc.dev.uptimecrew.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taxcalc-api
                port:
                  number: 8080
